# sukodu

./: .gitignore  Cargo.toml  README.md
.agents/skills/document_feature_changes/: SKILL.md
.agents/skills/manage_backlog/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml
backlog/: config.yml
backlog/tasks/: task-1-wasm-web-interface.md  task-2-sudoku-variants.md  task-3-logical-solver.md  task-4-interactive-tui.md
frontend/: README.md  eslint.config.js  index.html  package.json  playwright.config.js  vite.config.js
frontend/e2e/: smoke.spec.js
frontend/src/: App.css  App.jsx  index.css  sudoku-logic.js  sudoku-logic.test.js  sudoku.worker.js
src/: dlx.rs  heap.rs  lib.rs  sudoku.rs  vision.rs
tests/: cli_tests.rs  sudoku_tests.rs  vision_tests.rs
