[package]
name = "sukodu"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sukodu"
path = "src/bin/main.rs"

[dependencies]
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = "0.25.1"
imageproc = "0.27.0"
ab_glyph = "0.2.28"
leptess = "0.14"



